--- a/source/clinicalreasoning-topics-definitional-resources.html
+++ b/source/clinicalreasoning-topics-definitional-resources.html
@@ -113,14 +113,14 @@
   &lt;dynamicValue&gt;
     &lt;path value=&quot;dispenseRequest.numberOfRepeatsAllowed&quot;/&gt;
     &lt;expression&gt;
-      &lt;language value=&quot;text/cql&quot;/&gt;
+      &lt;language value=&quot;text/cql-expression&quot;/&gt;
       &lt;expression value=&quot;3&quot;/&gt;
     &lt;/expression&gt;
   &lt;/dynamicValue&gt;
   &lt;dynamicValue&gt;
     &lt;path value=&quot;dispenseRequest.quantity&quot;/&gt;
     &lt;expression&gt;
-      &lt;language value=&quot;text/cql&quot;/&gt;
+      &lt;language value=&quot;text/cql-expression&quot;/&gt;
       &lt;expression value=&quot;30 &apos;{tbl}&apos;&quot;/&gt;
     &lt;/expression&gt;
   &lt;/dynamicValue&gt;
