QA: Fixed broken link

--- a/source/clinicalreasoning-knowledge-artifact-representation.html
+++ b/source/clinicalreasoning-knowledge-artifact-representation.html
@@ -713,7 +713,7 @@
 <a name="guideline"> </a>
 <h4>Guideline</h4>
 
-<p>Broadly, the artifacts described above can be combined in an implementation guide that provides definitions of the recommendations of a guideline. In addition, through application of the FHIR <a href="workflow">Workflow</a> patterns, these definitions can be realized and integrated with clinical workflow for patients as part of the delivery of care. At the highest level, a computable guideline is represented using an Implementation Guide resource:</p>
+<p>Broadly, the artifacts described above can be combined in an implementation guide that provides definitions of the recommendations of a guideline. In addition, through application of the FHIR <a href="workflow.html">Workflow</a> patterns, these definitions can be realized and integrated with clinical workflow for patients as part of the delivery of care. At the highest level, a computable guideline is represented using an Implementation Guide resource:</p>
 
 <pre><code>&lt;ImplementationGuide xmlns=&quot;http://hl7.org/fhir&quot;&gt;
   &lt;id value=&quot;chf-ig&quot;/&gt;
