--- a/source/terminologies-systems.html
+++ b/source/terminologies-systems.html
@@ -14,7 +14,8 @@
 <%txheader systems%>
 
 <h2>Code Systems</h2>
-<table class="colsi"><tr><td id="wg">Responsible Owner: <a _target="blank" href="[%wg vocab%]">[%wgt vocab%]</a> Work Group</td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:<!--!ns!--><a href="versions.html#std-process">Informative</a></td></tr></table>
+<table class="colsi"><tr><td id="wg">Responsible Owner: <a _target="blank" href="[%wg vocab%]">[%wgt vocab%]</a> Work Group</td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:<!--!ns!--><a href="versions.html#std-process">Normative</a></td></tr></table>
+
 
 <p>
 The following names (URIs) may be used in the <i>system</i> element of the <a href="datatypes.html#Coding">Coding</a> datatype.
