[FHIR-53085](https://jira.hl7.org/browse/FHIR-53085): Cleanup related to moving CDS Hooks mapping to CDS IG

--- a/source/clinicalreasoning-module.html
+++ b/source/clinicalreasoning-module.html
@@ -67,7 +67,7 @@ in order to support consistent definitions for schema and UML derived code.
 
 <p>From the perspective of a Knowledge Content Provider, this module defines search functionality for using a FHIR server as a knowledge artifact repository.</p>
 
-<p>From the perspective of a Knowledge Evaluation Service Provider, this module defines operations and profiles in support of evaluating quality measures, and defining and using <a href="https://cds-hooks.hl7.org/">CDS Hooks</a> services.</p>
+<p>From the perspective of a Knowledge Evaluation Service Provider, this module defines operations and profiles in support of evaluating quality measures, and defining and using <a href="https://clinicalreasoning-cds-on-fhir.html/">Decision Support Services</a>.</p>
 
 <p>And finally, from the perspective of a Knowledge Evaluation Service Consumer, this module defines the expected available operations and behavior of a knowledge evaluation service.</p>
 
