--- a/source/references.html
+++ b/source/references.html
@@ -351,19 +351,90 @@ search. Additional notes about searching on versioned references to canonical UR
  <li>Search only regards the latest version for each different logical resource id</li>
  <li>This search only works for specific data elements of type of uri that act as canonical URL's (see list below)</li>
  <li>If there is no match (either because .version is empty or is different), the instance will not be matched, and will not appear in the result bundle</li>
- <li>If there are multiple matches (because the version is missing, or incomplete) then it is a matter of policy to decide how to resolve this (see below)</li>
- <li></li>
+ <li>If there are multiple matches (because the version is missing, or incomplete - see below) then it is a matter of policy to decide how to resolve this (see below)</li>
 </ul>
 <p>
-Systems resolving references to canonical URLs SHOULD first try to resolve the reference using
-the canonical reference (e.g. search on a known registry of terminology, conformance, or knowledge
-resources as appropriate), and then fall back to direct resolution using the URL as
-a literal reference if a local version of the canonical resource cannot be found.
-This approach is safe because the approaches must refer to the same
-artifact, though implementations will need to make appropriate arrangements regarding
-the version and/or currency of their local copy of the artifact.
+Systems resolving references to canonical URLs SHOULD first try to , and then .
+
 </p>
+
+<a name="matching"></a>
+<h3>Version Matching for Canonical Resources</h3>
+<p>
+In order to work with Canonical Resources, it is necessary to be able to match version strings
+from versioned references to canonical resources to the resources themselves. Among other places, 
+versioned references arise in the following contexts:
+</p>
+<ul>
+ <li>Any Canonical Reference</li>
+ <li>Coding.system+version</li>
+ <li>ValueSet.compose.include.system+version</li>
+ <li>Dependencies between <a href="packages.html">packages</a></li>
+</ul>
+<p>
+If there is no stated version for the reference, or the version is a wildcard (see below), 
+<b>and if the reference is found in a resource in an <a href="packages.html">NPM Package</a></b>, 
+then any application looking for the correct version SHALL first look through the package and its dependencies 
+when resolving the reference. If no matching version is found in the package or its dependencies, the application
+can then look through any other resources it has available. This rule applies even once the resource is removed 
+from the package. Other ways target resources might be made available to applications:
+</p>
+<ul>
+  <li>The resource might be made available to the system through it's normal configuration</li>
+  <li>The application might resolve the reference using the canonical reference (e.g. search on a known registry
+    of terminology, conformance, or knowledge resources as appropriate)</li>
+  <li>The application might fall back to direct resolution using the URL as a literal reference if a local
+    version of the canonical resource cannot be found. Note: this approach is safe because the approaches
+    must refer to the same artifact, though implementations will need to make appropriate arrangements regarding
+    the version and/or currency of their local copy of the artifact.</li>
+</ul>
+<p>
+Applications are not required to look through external references, and production systems typically do not.
+</p>
+<p>
+If the reference has a version, then matching of version strings depends on the format of the string. The format can be determined either by looking at the
+<a href="canonicalresource-definitions.html#CanonicalResource.versionAlgorithm_x_">versionAlgorithm[x]</a> (if present)
+or inferred from the provided version.
+</p>
+<ul>
+  <li>
+    <b>SemVer</b>: If the format of the version is <a href="http://semver.org">semver</a>, then semver wildcard logic applies.  Specifically:
+     <ul>
+        <li><code>2.0</code> will not match anything (not valid semver, and no wildcard specified)</li>
+        <li><code>2.0.0</code> matches <code>2.0.0</code> and not <code>2.0.1</code> or <code>2.0.0-something</code> or <code>2.0.0+something</code></li>
+        <li><code>2.x.x</code> matches <code>2.0.1</code> and <code>2.1.0</code>, etc. but not <code>2.0.1-something</code></li>
+        <li><code>2.0.*</code> matches <code>2.0.0</code>, <code>2.0.1</code>, and not <code>2.0.0-something</code> or <code>2.0.0+something</code></li>
+        <li><code>2.0.0-*</code> matches <code>2.0.0-prerelease</code> or any other label but not <code>2.0.0+build</code></li>
+        <li><code>2.0.0+*</code> matches <code>2.0.0+build</code> or any other build but not <code>2.0.0</code> or <code>2.0.0-prerelease</code></li>
+        <li><code>2.0.x-x</code> matches <code>2.0.1-prerelease</code> or <code>2.0.1-prerelease</code> but not <code>2.0.0</code> or <code>2.0.1</code></li>
+        <li><code>2.0?</code> matches <code>2.0.1</code>, <code>2.0.0-build</code> etc - any valid semver that starts with <code>2.0</code></li>
+        <li><code>2.0.1?</code> matches <code>2.0.1</code>, <code>2.0.1-release</code>, <code>2.0.1+build</code> etc - anything that starts with <code>2.0.1</code></li>
+     </ul>
+  </li>
+  <li>
+    <b>date</b>: if the format of the version is a date, then date matching applies - the version matching string could be 
+      <code>YYYY</code>, <code>YYYYMM</code>, <code>YYYY-MM</code>, etc.  The separators specified must match the format of the date.  
+      E.g. If the version is <code>2024-01-05</code>, then <code>202401</code> won't match, but <code>2024-01</code> will.
+      On the other hand, if the version is <code>20240105</code>, then <code>202401</code> will match and <code>2024/01</code> will not
+  </li>
+  <li>
+    <b>url</b>: if the format of the version string is a url (a la snomed) then matching on URL applies - so matching is done by tokenizing
+    the URL on '/' and matching on all provided tokens.  I.e. <code>http://foo.com/bar</code> would match <code>http://foo.com/bar/1</code>, 
+    but would not match <code>http://foo.com/bar1</code>
+  </li>
+  <li>
+    <b>fallback</b>: otherwise, left matching of the string applies.  I.e. If the version starts with (case sensitive) the search string, it's a match.
+  </li>
+</ul>
+<p>
+If the stated or inferred <a href="canonicalresource-definitions.html#CanonicalResource.versionAlgorithm_x_">versionAlgorithm[x]</a> differs
+between two different versions of the same canonical resource (i.e. the <code>url</code>) properties match), applications generally follow 
+the fallback approach, but may choose some other approach. 
+</p>
+
 <a name="canonical-list"> </a>
+<h3>Canonical Resources</h3>
+
 <p>
 The following resources have <a href="canonicalresource.html">canonical URLs</a> and are allowed to be the target of references to a canonical URLs:
 </p>
@@ -384,7 +455,7 @@ matching resources. This may arise because:
 </p>
 <ul>
   <li>No version was specified e.g. <code>http://example.org/CodeSystem/abc</code></li>
-  <li>A partial verion was specified e.g. <code>http://example.org/CodeSystem/abc|1.2</code> matches both versions <code>1.2.1</code> and <code>1.2.3-draft</code></li>
+  <li>A partial verion was specified e.g. <code>http://example.org/CodeSystem/abc|1.2.x</code> matches both versions <code>1.2.1</code> and <code>1.2.3-draft</code></li>
   <li>A full version was specified e.g. <code>http://example.org/CodeSystem/abc|1.2.2</code> and the server had two different resources for version <code>1.2.2</code> </li>
 </ul>
 <p>
@@ -395,18 +466,19 @@ process safeguards intended to prevent it). But the other two cases are not cons
 the system is intended to work, and the client is purposefully delegating to the server the task of determining
 the correct version to use. In general, the correct version to use is the latest version approved for 
 production use. This specification does not define the algorithm for servers to use to determine 
-the latest version. In principle, the server chooses based on the following information from the 
-resources:
+the latest version (except as noted above with regard to packages). In principle, the server chooses
+based on the following information from the resources:
 </p>
 <ul>
   <li>Version e.g. Based on <a href="http://semver.org">Semver</a> Version practices, dateTime, etc.</li>
   <li>Publication Date</li>
   <li>Status</li>
+  <li>Package version and date (if known)</li>
 </ul>
 <p>
 Canonical resources are not required to use <code>Semver</code>, though HL7 recommends using 
 it, and follows SemVer for its own content. However, other publishers of canonical resources 
-follow other practices, and some kind of date based versioning schemes are not unsual.
+follow other practices, and some kind of date based versioning schemes are not unusual.
 Servers may have access to additional information or policy guidance that determines which 
 resource to choose as the default, and additional knowledge about how to reason with 
 the versioning scheme in use.
@@ -414,7 +486,7 @@ the versioning scheme in use.
 <p>
 Because determining the 'current' version when the algorithm is unknown is problematic, canonical resources
 SHOULD declare the <a href="canonicalresource-definitions.html#CanonicalResource.versionAlgorithm_x_">versionAlgorithm[x]</a>
-element to instruct servers on what altorithm to use for comparison.  In the absence of this element,
+as described above. In the absence of this element,
 servers MAY choose to guess the algorithm or use their own default logic to determine which
 resource to return in the event there are multiple candidate instances with the same canonical URL.
 </p>
