FHIR-53045 Inconsistent definition of standards status values

--- a/source/versions.html
+++ b/source/versions.html
@@ -54,14 +54,11 @@ different aspects of the specification.  They are as follows:
     </tr>
     <tr>
       <th style="background-color: #e6ffe6; border: 1px grey solid; padding-left: 3px; padding-right: 3px;"><a name="normative"></a>Normative</th>
-      <td>This content was approved by the <a href="https://ansi.org">ANSI standards process</a> in a previous version (see <a href="history.html#normative">Normative status note</a>).
+      <td>This content was approved by the <a href="https://ansi.org">ANSI standards process</a>.
         It has been subject to review and production implementation in a wide variety of environments.
         The content is considered to be stable and has been 'locked', subjecting it to FHIR
         <a href="#change">Inter-version Compatibility Rules</a>.  While changes are possible, they are
         expected to be infrequent and are tightly constrained.
-        <br/><br/>
-        Note that this version of the specification <b>has NOT</b> been submitted to ANSI for 
-        consideration as a normative standard.
       </td>
     </tr><!--
     <tr>
@@ -118,6 +115,11 @@ different aspects of the specification.  They are as follows:
     </tr>
   </tbody>
 </table>
+
+<p>
+Standards status, when found in a specification under ballot or in a Continuous Integration (CI) build reflects the intended
+status of the artifact after balloting is complete and the final publication is released.
+</p>
 
 <a name="mixed"></a>
 <h4>Mixed Normative content</h4>
