--- a/source/references.html
+++ b/source/references.html
@@ -494,7 +494,7 @@ matching resources. This may arise because:
 </p>
 <ul>
   <li>No version was specified e.g. <code>http://example.org/CodeSystem/abc</code></li>
-  <li>A partial verion was specified e.g. <code>http://example.org/CodeSystem/abc|1.2.x</code> matches both versions <code>1.2.1</code> and <code>1.2.3-draft</code></li>
+  <li>A partial version was specified e.g. <code>http://example.org/CodeSystem/abc|1.2.x</code> matches both versions <code>1.2.1</code> and <code>1.2.3-draft</code></li>
   <li>A full version was specified e.g. <code>http://example.org/CodeSystem/abc|1.2.2</code> and the server had two different resources for version <code>1.2.2</code> </li>
 </ul>
 <p>
