FHIR-48356 Duplicate section - FHIR NPM Package Registry

--- a/source/packages.html
+++ b/source/packages.html
@@ -23,7 +23,7 @@ Some important packages for FHIR Implementers:
   <li><code>hl7.terminology</code>: The package that contains all the code systems and value sets maintained by HL7 for all standards it publishes</li>
 </ul>
 
-<h3>FHIR NPM Packages</h3>
+<h3>FHIR NPM Package Structure</h3>
 <p>
 Each FHIR package is a tarball (tar in gzip) that contains a <code>package</code> folder that 
 contains:
@@ -234,7 +234,7 @@ the same name in the resource identified by the filename, irrespective
 of resource type.
 </p>
 
-<h3>FHIR NPM Package Registry</h3>
+<h3>FHIR Package Caching</h3>
 <p>
 For user convenience, tools may choose 
 to use a <a href="https://confluence.hl7.org/display/FHIR/FHIR+Package+Cache">common local cache</a>.
