--- a/source/packages.html
+++ b/source/packages.html
@@ -234,12 +234,30 @@ the same name in the resource identified by the filename, irrespective
 of resource type.
 </p>
 
+<a name="composition"></a>
+<h3>FHIR Package Composition</h3>
+
+<p>
+In theory, packages can contain an unlimited number of artifacts with unlimited size.  However, in practice, real-world tools
+will struggle or even fail if packages are too large.  Authors should consider this when deciding how they create packages.
+Ways to help manage this issue include:
+</p>
+<ul>
+  <li>Packaging 'extra' collateral such as testing support and examples in separate packages from the definitional content</li>
+  <li>Ensuring package artifacts are expressed in their 'minimal' form whenever possible (e.g. not including expansions of value sets)</li>
+  <li>When it's possible to control size (e.g. examples), try to keep sizes smaller.  For example, if there's a need to have an example of a video, 
+    make sure it's low resolution and short.</li>
+  <li>Consider publishing content in subsets if the overall number of files would be significant.  (This will also often speed the publication process.)</li>
+</ul>
+
+<a name="caching"></a>
 <h3>FHIR Package Caching</h3>
 <p>
 For user convenience, tools may choose 
 to use a <a href="https://confluence.hl7.org/display/FHIR/FHIR+Package+Cache">common local cache</a>.
 </p>
 
+<a name="registry"></a>
 <h3>FHIR NPM Package Registry</h3>
 <p>
 The FHIR packages are all hosted on the registry <a href="http://packages.fhir.org">http://packages.fhir.org</a>.
