FHIR-46072 The package.html page is labeled informative but contains mandatory text

--- a/source/packages.html
+++ b/source/packages.html
@@ -9,7 +9,7 @@
 [%file newnavbar%]
 
 <h2>FHIR NPM Packages</h2>
-<table class="colsi"><tr><td id="wg">Responsible Owner: <a _target="blank" href="[%wg fhir%]">[%wgt fhir%]</a> Work Group</td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:<!--!ns!--><a href="versions.html#std-process">Normative</a></td></tr></table>
+<table class="colsn"><tr><td id="wg">Responsible Owner: <a _target="blank" href="[%wg fhir%]">[%wgt fhir%]</a> Work Group</td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:<!--!ns!--><a href="versions.html#std-process">Normative</a></td></tr></table>
 
 <p>
 FHIR Specifications are published in HTML format for human consumption, and as NPM packages for machine consumption.
