FHIR-47042 Improve readability of Version Management Policy

--- a/source/versions.html
+++ b/source/versions.html
@@ -98,7 +98,7 @@ different aspects of the specification.  They are as follows:
       correction is complete after it has been subjected to ballot
       <br/>
       <br/>
-      Some resources with a standards status of 'draft' have an FMM level of 1 or 2 - this means that the committee 
+      Some resources with a standards status of 'draft' have an <a href="#maturity">FMM (FHIR Maturity Model)</a> level of 1 or 2 - this means that the committee 
       responsible for them is ready for them to be tested and balloting, but that balloting has not yet occurred. 
       Draft resources cannot have a <a href="#maturity">FMM</a> level greater than 2
     </td>
@@ -165,7 +165,7 @@ reading/using these elements has the potential to cause breaking change to their
 
 <a name="levels"></a>
 <a name="maturity"></a>
-<h3>Maturity Levels</h3>
+<h3>The FHIR Maturity Model</h3>
 <p>
 The content of this release has been subject to significant review through ballot and other HL7 processes and many aspects of it have been
 implemented and subjected to interoperability testing through Connectathons and early adoption.  However, the degree of testing has varied.  Some resources
