FHIR-45479 Clarify use of namespaces for globally unique identifiers

--- a/source/datatypes.html
+++ b/source/datatypes.html
@@ -1394,11 +1394,17 @@ others would appear on <a href="servicerequest.html">ServiceRequest</a>.
   that non-case-sensitive processing is safe.
 </p>
 <p>
-If the identifier value itself is naturally a globally unique URI (e.g. an OID, a UUID, or a URI with no trailing local part),
-then the <code>system</code> SHALL be "<code>urn:ietf:rfc:3986</code>", and the URI is in the <code>value</code>
-(OIDs and UUIDs using urn:oid: and urn:uuid: - see <a href="datatypes-mappings.html#ii">note on the V3 mapping</a> and the <a href="datatypes-examples.html#Identifier">examples</a>).
-Naturally globally unique identifiers are those for which no other <a href="identifier-registry.html">system has been assigned</a> and where the value of the identifier is reasonably
-expected to not be re-used.  Typically, these are absolute URIs of some kind.
+Identifiers are expected to be globally unique by nature of the combination of system and value.
+In some cases, the 'value' element is already globally unique independent of Identifier.system.
+Typically, these are absolute URIs of some kind (e.g. an OID, a UUID, or a URI with no trailing local part).
+In such a case, an <code>Identifier.system</code> <a href="identifier-registry.html">may be established</a> by the assigner
+or community to establish the 'context' in which the identifier is used.
+</p>
+<p>
+When using globally unique identifiers that are expressible as URIs as a value, a system SHALL be provided.
+If there is no assigned system, then the system SHALL be <code>urn:ietf:rfc:3986</code> and the value is
+expressed as a URI (OIDs and UUIDs using <code>urn:oid:</code> and <code>urn:uuid:</code> - see 
+<a href="datatypes-mappings.html#ii">note on the V3 mapping</a> and the <a href="datatypes-examples.html#Identifier">examples</a>.
 </p>
 <p>
 In some cases, the system might not be known - only the value is known (e.g. a simple device that scans a barcode),
