FHIR-40757 Using R5 extensions in R4 that make required fields obsolete.

--- a/source/documents.html
+++ b/source/documents.html
@@ -74,7 +74,7 @@ resource, that provide the supporting details for the document. The bundle gathe
 of the document into a single XML or JSON document which may be signed and managed as required.
 The resources may include both human readable and computer processable portions. In addition, the bundle
 may include <a href="http://www.w3.org/Style/CSS/Overview.en.html">CSS stylesheets</a>,
-<a href="provenance.html">Provenance</a> statements and a signature.
+<a href="provenance.html">Provenance</a> statements including signatures.
 </p>
 <p>
 The composition resource is the foundation of the clinical document, it:
