FHIR-41478 Clarify when OID and GUID identifiers, etc. must use RFC 3986 system and format

--- a/source/datatypes.html
+++ b/source/datatypes.html
@@ -1397,8 +1397,8 @@ others would appear on <a href="servicerequest.html">ServiceRequest</a>.
 Identifiers are expected to be globally unique by nature of the combination of system and value.
 In some cases, the 'value' element is already globally unique independent of Identifier.system.
 Typically, these are absolute URIs of some kind (e.g. an OID, a UUID, or a URI with no trailing local part).
-In such a case, an <code>Identifier.system</code> <a href="identifier-registry.html">may be established</a> by the assigner
-or community to establish the 'context' in which the identifier is used.
+In such a case, an <code>Identifier.system</code> value <a href="identifier-registry.html">may be established</a> by the assigner
+or community to identify that collection of identifiers
 </p>
 <p>
 When using globally unique identifiers that are expressible as URIs as a value, a system SHALL be provided.
