Added an implementer note about the HL7 Terminology Infrastructure Work Group FHIR Implementation Guide to the Terminology Service page.

--- a/source/terminology-service.html
+++ b/source/terminology-service.html
@@ -166,6 +166,9 @@ A FHIR Terminology Service SHALL support the following operations with the assoc
     </td>
   </tr>
 </table>
+[%impl-note%]
+Implementers may choose to follow and optionally implement the additional operations being developed as part of the HL7 Terminology Infrastructure Work Group FHIR Implementation Guide.
+[%end-note%]
 <a name="examples"></a>
 <h4>CapabilityStatement and TerminologyCapabilities examples</h4>
 <ul>
